--- a/frontend/src/components/LoginRegister.css
+++ b/frontend/src/components/LoginRegister.css
@@ -12,7 +12,7 @@ body {
   /* Container for the form */
   .form-container {
     max-width: 400px;
-    padding: 30px;
+    padding: 30px 30px 20px 30px;
     background-color: #fff;
     border-radius: 8px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
@@ -64,13 +64,14 @@ body {
 
   .password-wrapper {
     position: relative; /* Needed for absolute positioning of the icon */
-    display: flex; /* Helps to align the input and the icon */
+    display: grid; /* Helps to align the input and the icon */
     align-items: center; /* Vertically center the icon */
   }
   
   .password-toggle {
     position: absolute;
-    right: 10px; /* Adjust as needed */
+    display: inline-block;
+    padding-top: 10px;
     cursor: pointer; /* Make it look clickable */
   }
   
